--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <script src="https://cdn.statically.io/gh/weberi/chatroom/master/dist/Chatroom.js"></script>
    <script type="text/javascript">
    var chatroom = new window.Chatroom({
-       host: "https://potential-spork-q76r77j5jw7wh4gjg-5005.app.github.dev/:5005",
+       host: "https://potential-spork-q76r77j5jw7wh4gjg-5005.app.github.dev/",
        title: "Chat with a bot",
        container: document.querySelector(".chat-container"),
        welcomeMessage: "Nice to meet you.",
